add movie details screen xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="movie_name_color">#ECECEC</color>
+    <color name="movie_rating_color">#FF3466</color>
+    <color name="actor_name_color">#D8D8D8</color>
 </resources>
