--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="background_color">#191926</color>
     <color name="movie_name_color">#ECECEC</color>
     <color name="movie_rating_color">#FF3466</color>
     <color name="actor_name_color">#D8D8D8</color>
+    <color name="review_color">#6D6D80</color>
 </resources>
