--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="movie_rating_color">#FF3466</color>
     <color name="actor_name_color">#D8D8D8</color>
     <color name="review_color">#6D6D80</color>
+    <color name="duration_text_color">#565665</color>
+    <color name="item_age_background_color">#191926</color>
 </resources>
