--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="margin_16dp">16dp</dimen>
-    <dimen name="text_14sp">14sp</dimen>
-    <dimen name="margin_8dp">8dp</dimen>
+    //matgin
+    <dimen name="margin_2dp">2dp</dimen>
+    <dimen name="margin_4dp">4dp</dimen>
     <dimen name="margin_6dp">6dp</dimen>
+    <dimen name="margin_8dp">8dp</dimen>
+    <dimen name="margin_12dp">12dp</dimen>
+    <dimen name="margin_16dp">16dp</dimen>
     <dimen name="margin_24dp">24dp</dimen>
     <dimen name="margin_28dp">28dp</dimen>
-    <dimen name="margin_4dp">4dp</dimen>
-    <dimen name="text_40sp">40sp</dimen>
-    <dimen name="margin_12dp">12dp</dimen>
+    <dimen name="margin_56dp">56dp</dimen>
+
+    //text size
+    <dimen name="text_8sp">8sp</dimen>
     <dimen name="text_12sp">12sp</dimen>
+    <dimen name="text_14sp">14sp</dimen>
+    <dimen name="text_40sp">40sp</dimen>
 </resources>
